facturascripts/StatefulSet-facturascripts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: facturascripts
  name: facturascripts
  namespace: business
spec:
  replicas: 1
  selector:
    matchLabels:
      name: facturascripts
  template:
    metadata:
      annotations:
        reloader.stakater.com/auto: "true"
      labels:
        name: facturascripts
    spec:
      containers:
      - command:
        - sh
        - -c
        - cp /var/www/html/htaccess-sample /var/www/html/.htaccess && apache2-foreground
        image: docker.io/facturascripts/facturascripts:2025.81
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /deploy
            port: 80
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 30
          timeoutSeconds: 5
        name: facturascripts
        ports:
        - containerPort: 80
          name: http
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /deploy
            port: 80
            scheme: HTTP
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 5
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /deploy
            port: 80
            scheme: HTTP
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - mountPath: /var/www/html/config.php
          name: config-output
          subPath: config.php
        - mountPath: /var/www/html/Plugins
          name: plugins
        - mountPath: /var/www/html/MyFiles
          name: myfiles
      volumes:
      - emptyDir: {}
        name: config-output
      - hostPath:
          path: /data/facturascripts/plugins
        name: plugins
      - hostPath:
          path: /cold-data/facturascripts/myfiles
        name: myfiles
      - configMap:
          name: config-php
        name: config-php
      - name: facturascripts-db
        secret:
          secretName: facturascripts-db
  updateStrategy:
    type: RollingUpdate
