facturascripts/Service-facturascripts.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: facturascripts
    name: facturascripts
  name: facturascripts
  namespace: business
spec:
  ports:
  - name: facturascripts-http
    port: 80
    targetPort: 80
  selector:
    name: facturascripts
